logs/dag_id=dag_with_postgres_operator_v01/run_id=scheduled__2022-09-04T00:00:00+00:00/task_id=create_postgres_table/attempt=1.log
[2022-09-05T20:52:38.685+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05T20:52:38.700+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05T20:52:38.700+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T20:52:38.700+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 6
[2022-09-05T20:52:38.700+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T20:52:38.721+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2022-09-04 00:00:00+00:00
[2022-09-05T20:52:38.728+0000] {standard_task_runner.py:52} INFO - Started process 11199 to run task
[2022-09-05T20:52:38.732+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'create_postgres_table', 'scheduled__2022-09-04T00:00:00+00:00', '--job-id', '382', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operators.py', '--cfg-path', '/tmp/tmpr2y5pklz', '--error-file', '/tmp/tmpuwqybve7']
[2022-09-05T20:52:38.732+0000] {standard_task_runner.py:80} INFO - Job 382: Subtask create_postgres_table
[2022-09-05T20:52:38.822+0000] {task_command.py:371} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table scheduled__2022-09-04T00:00:00+00:00 [running]> on host c033faf33c57
[2022-09-05T20:52:38.920+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Ancordss
AIRFLOW_CTX_DAG_ID=dag_with_postgres_operator_v01
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05T20:52:39.038+0000] {base.py:68} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-09-05T20:52:39.076+0000] {sql.py:315} INFO - Running statement: create table if not exist dag_runs (
                dt date,
                dag character varying,
                primary key (dt, dag_id)
            ), parameters: None
[2022-09-05T20:52:39.096+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 1: create table if not exist dag_runs (
                            ^

[2022-09-05T20:52:39.134+0000] {taskinstance.py:1412} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=create_postgres_table, execution_date=20220904T000000, start_date=20220905T205238, end_date=20220905T205239
[2022-09-05T20:52:39.155+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 382 for task create_postgres_table (syntax error at or near "exist"
LINE 1: create table if not exist dag_runs (
                            ^
; 11199)
[2022-09-05T20:52:39.178+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-05T20:52:39.226+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
